Invoice App Functionality added

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
                         <p>TASK</p>
                         <p>TOTAL</p>
                     </div>
+                    <div class="order-items">
+                        <ul class="item-el" id="item-el"></ul>
+                        <ul class="price-el" id="price-el"></ul>
+                    </div>
+
                 </div>
                 <hr>
                 <div class="total">
